# nRF52-PCA10040-demos

./: .gitignore  README.md
GPIO-polling/: app.overlay
GPIO-polling/src/: main.c
I2C-sensor/: nrf52dk_nrf52832.overlay  prj.conf
I2C-sensor/src/: main.c
atcmd-led/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
atcmd-led/src/: main.c
basic-mutex/: prj.conf
basic-mutex/src/: main.c
basic-semaphores/: prj.conf
basic-semaphores/src/: main.c
basic-thread/: prj.conf
basic-thread/src/: main.c
ble-broadcast-connectable-advertising/: prj.conf
ble-broadcast-connectable-advertising/src/: main.c
ble-broadcast-non-connectable-advertising/: prj.conf
ble-broadcast-non-connectable-advertising/src/: main.c
ble-connection/: prj.conf
ble-connection-parameters/: nrf52dk_nrf52832.overlay  prj.conf
ble-connection-parameters/src/: main.c
ble-connection/src/: main.c
ble-custom-gatt-service/: CMakeLists.txt  prj.conf
ble-custom-gatt-service/src/: main.c
ble-dynamic-advertising/: prj.conf
ble-dynamic-advertising/src/: main.c
ble-led-sample/: prj.conf
gpio-interrupt/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
gpio-interrupt/src/: main.c
gpio-polling/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
gpio-polling/src/: main.c
logging/: .gitignore  CMakeLists.txt  prj.conf
logging/src/: main.c
minimal/: CMakeLists.txt  Kconfig  nrf52dk_nrf52832.overlay  prj.conf
minimal/src/: main.c  myMath.c  myMath.h
uart-interrupt/: CMakeLists.txt  prj.conf
uart-polling/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
(+6 files in other folders)
